# llmog

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  settings.toml
docs/: dynaprompt.md
src/: app.py  auto_annotiontion.py  changing_defect_to_classes.py  detection_pipeline.py  image_preprocessing.py  llama_server_manager.py  streamlit_interface.py
src/auto_annotation/: batch_runner.py  checkpoint.py  cli.py  main.py  server_init.py  single_image.py  stats.py  yaml_utils.py
src/free_detection/: app.py  bytetrack.py  detection_pipeline.py  image_preprocessing.py  siamonnx.py  trackers.py
src/interface/: __init__.py  app.py  app_builder.py  console.css  console.js  console_theme.py  state.py  tab_batch.py  tab_prompts.py  tab_realtime.py  tab_server.py
src/interface/realtime/: handlers.py  state.py  ui.py  utils.py
src/prompts/: detector_agent.md  feedback_agent.md  realtime_detector.md
src/servers/: __init__.py  llama_server_manager.py  vllm_server_manager.py
