[project]
name = "object-detection-llms-testing"
version = "0.1.0"
description = "Interactive test console for assessing Vision-Language Models (VLMs) on general Object Detection tasks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "json-repair>=0.61.0",
    "matplotlib>=3.11.0",
    "openai>=2.43.0",
    "pillow>=12.2.0",
]

[project.scripts]
detection-tester = "app:build_app"

[tool.setuptools]
package-dir = {"" = "src"}

