[project]
name = "llmog"
version = "0.1.0"
description = "A pipeline for object detection using LLMs."
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "json-repair==0.61.0",
    "matplotlib==3.11.0",
    "openai==2.43.0",
    "pillow==12.2.0",
    "gradio==6.19.0",
    "requests>=2.34.2",
    "wrapt>=2.2.2",
    "httpx>=0.28.1",
    "numpy>=1.24.0",
    "streamlit>=1.58.0",
    "opencv-python>=4.9.0.80",
    "rich>=15.0.0",
    "onnxruntime>=1.27.0",
    "dynaprompt>=0.5.0",
]

[project.optional-dependencies]
vllm = ["vllm>=0.6.0"]


[project.scripts]
# Unified entry point: dispatch to free_detection or auto_annotation via --task
llmog = "main:main"
# Convenience aliases that pass the right --task for you
detection-cli = "free_detection:main"
auto-annotation = "auto_annotation:main"
# Launch the Gradio web interface
detection-gui = "free_detection.gui:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.uv]
package = true
